--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "name": "account-manament",
+  "scripts": {
+    "compile": "npx hardhat compile",
+    "typechain": "npx hardhat compile",
+    "test": "npx hardhat test",
+    "dev": "npm run compile && npm run typechain && npm run test"
+  },
   "dependencies": {
     "@chainlink/contracts": "^0.4.1",
     "@openzeppelin/contracts": "^4.6.0"
@@ -26,5 +32,6 @@
     "ts-node": "^10.9.1",
     "typechain": "^8.1.1",
     "typescript": "^4.9.5"
-  }
+  },
+  "license": "MIT"
 }
